<resources>
    <string name="app_name">pedidosApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pedidos App</string>
    <string name="nav_header_subtitle">Proyecto PDM 2024</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_menus">Menus</string>
    <string name="menu_pedido">Mi pedido</string>
    <string name="menu_agregar_item">Agregar Item</string>
    <string name="menu_direccion">Direccion de entrega</string>

    <string name="default_text">default text</string>
    <string name="default_number">999</string>

    <string name="pedidosFragmentTittle">Mi pedido</string>
    <string name="pedidosFragmentBoton">Hacer pedido</string>
    <string name="pedidosFragmentEstado">Estado de su pedido:</string>
    <string name="pedidosFragmentItems">Su orden:</string>
    <string name="pedidosFragmentTotal">Total (USD) $:</string>
    <string name="pedidosFragmentPropina">Propina (USD) $:</string>

    <string name="agregarItemTitulo">Agrege el siguiente item a su pedido:</string>
    <string name="agregarItemCantidad">Cantidad:</string>
    <string name="agregarItemBoton">Agregar</string>
    <string name="eliminarItemBoton">Eliminar</string>

    <string name="SignoUsd">$</string>

    <string name="direccionTitulo">Especifique su direccion para la entrega</string>
    <string name="direccionNombre">Ponle un nombre a tu direccion:</string>
    <string name="direccionCalle">Nombre o numero de la calle:</string>
    <string name="direccionColoniaBarrio">Nombre de la colonia o barrio:</string>
    <string name="direccionNumCasa">Numero de casa:</string>
    <string name="direccionDepartamento">Departamento:</string>
    <string name="direccionMunicipio">Municipio:</string>
    <string name="direccionReferencia">Especifique una referencia para encontrar su direccion:</string>
</resources>