<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.pdm115gt3g2.pedidosapp.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />
    <fragment
        android:id="@+id/nav_menus"
        android:name="com.pdm115gt3g2.pedidosapp.ui.menus.MenusFragment"
        android:label="@string/menu_menus"
        tools:layout="@layout/fragment_menus" />
    <fragment
        android:id="@+id/nav_pedido"
        android:name="com.pdm115gt3g2.pedidosapp.ui.pedidos.PedidosFragment"
        android:label="@string/menu_pedido"
        tools:layout="@layout/fragment_pedidos" />
</navigation>