<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.pedidos.AgregarItemFragment">


    <TextView
        android:id="@+id/txtAgregarItemTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregarItemTitulo"
        android:padding="10dp"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/imageAgregarItem"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/baseline_broken_image_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/txtAgregarItemNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_text"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="28sp"/>

            <TextView
                android:id="@+id/txtAgregarItemDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_text" />

            <TextView
                android:id="@+id/txtAgregarItemPrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:textSize="18sp"
                android:textColor="@color/green"
                android:text="@string/default_text"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="10dp">

        <TextView
            android:id="@+id/lblAgregarItemCantidad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/agregarItemCantidad" />

        <EditText
            android:id="@+id/txtAgregarItemCantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/btnAgregarItemPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/agregarItemBoton" />

</LinearLayout>