<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="20dp"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp">


        <ImageView
            android:id="@+id/imageItemPedido"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/food" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/idItemPedido"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/default_text"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/nombreItemPedido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/default_text" />

            <TextView
                android:id="@+id/descripcionItemPedido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:text="@string/default_text" />

            <TextView
                android:id="@+id/tipoItemPedido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblPrecioItemPedido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:textColor="@color/green"
                    android:textStyle="bold"
                    android:text="@string/SignoUsd" />

                <TextView
                    android:id="@+id/precioItemPedido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green"
                    android:textStyle="bold"
                    android:text="@string/default_text" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblCantidadItemPedido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="5dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="X"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/cantidadItemPedido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="@string/default_number"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>